--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/charts": "^2.1.1",
     "@reduxjs/toolkit": "^2.2.5",
     "antd": "^5.18.1",
     "axios": "^1.7.2",
