--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@reduxjs/toolkit": "^2.2.5",
     "antd": "^5.18.1",
     "axios": "^1.7.2",
+    "dayjs": "^1.11.11",
+    "moment": "^2.30.1",
     "qs": "^6.12.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
